--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <!-- <link href="vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css"> -->
-    <link href="vendor/fontawesome-free-5.5.0-web/css/all.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Caveat|Open+Sans+Condensed:300|Oswald:300|Roboto+Condensed:400,700" rel="stylesheet" type='text/css'>
-
-
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
-
+    
     <!-- Custom styles for this template -->
     <link href="css/agency_191218.css" rel="stylesheet">
 
